# CFXS-L0-ARM-Debugger

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTORS.md  LICENSE  README.md  TestProject.elf  _Sources.cmake
CFXS_L0_Debugger/: CMakeLists.txt  _License.lhg  _Modules.cmake  _Sources.cmake
CFXS_L0_Debugger/_disabled/: L0_Application.cpp
CFXS_L0_Debugger/_disabled/UI/Helpers/: CreateQMenuTextSeparator.hpp
CFXS_L0_Debugger/_disabled/UI/Models/FileBrowser/: FileBrowserModel.cpp  FileBrowserModel.hpp
CFXS_L0_Debugger/_disabled/UI/Models/Symbols/: SymbolSearchSortProxy.cpp  SymbolSearchSortProxy.hpp  SymbolTableModel.cpp  SymbolTableModel.hpp
CFXS_L0_Debugger/_disabled/UI/Panels/: I_Panel.hpp  TextEditPanel.hpp  WorkspacePanel.hpp
CFXS_L0_Debugger/_disabled/UI/Panels/AppLogPanel/: AppLogPanel.cpp
CFXS_L0_Debugger/_disabled/UI/Panels/HexEditorPanel/: HexEditorPanel.cpp  HexEditorPanel.ui
CFXS_L0_Debugger/_disabled/UI/Panels/TextEditPanel/: TextEditPanel.cpp
CFXS_L0_Debugger/_disabled/UI/Panels/WorkspacePanel/: WorkspacePanel.cpp
CFXS_L0_Debugger/_disabled/UI/Providers/: FileIconProvider.cpp
CFXS_L0_Debugger/_disabled/UI/Windows/AboutWindow/: AboutWindow.cpp  AboutWindow.hpp
CFXS_L0_Debugger/_disabled/UI/Windows/MainWindow/: CFXS_Center_Widget.hpp  MainWindow.ui
CFXS_L0_Debugger/res/: Fonts.qrc  Lua.qrc  STLink_Chips.qrc  Styles.qrc  UI.qrc  index.html
CFXS_L0_Debugger/res/Images/UI/dock/: dock_latest.xcf
CFXS_L0_Debugger/res/Lua/: CFXS_Lib.lua
CFXS_L0_Debugger/res/Styles/: Main.qss
CFXS_L0_Debugger/src/: Application.cpp  Application.hpp  Assert.hpp  Compiler.hpp  Utils.hpp  main.cpp  win.rc
CFXS_L0_Debugger/src/Core/: L0_Application.cpp  L0_Application.hpp  PlatformUtils.hpp
CFXS_L0_Debugger/src/Core/DWARF/: AddressRanges.hpp  DIE.hpp
CFXS_L0_Debugger/src/Core/ELF/: ELF.hpp  ELF32.hpp  ELF_Reader.cpp  ELF_Reader.hpp
CFXS_L0_Debugger/src/Core/Probe/: I_Probe.hpp
CFXS_L0_Debugger/src/Core/Probe/JLink/: JLink.cpp  JLink.hpp  JLink_GetConnectedProbes.cpp  JLink_ProbeInfo.cpp  JLink_Target.cpp
CFXS_L0_Debugger/src/Core/Probe/STLink/: STLink.cpp  STLink.hpp  STLink_GetConnectedProbes.cpp  STLink_Target.cpp
CFXS_L0_Debugger/src/Core/Project/: ProjectManager.cpp  ProjectManager.hpp
CFXS_L0_Debugger/src/Core/Test/: IAR_Macro_Parser.lua  RVeips_ProbeTest.cpp  RVeips_ProbeTest.hpp  ddram.iar
CFXS_L0_Debugger/src/Debugger/ELF/: ELF.hpp  ELF32.hpp  ELF_Reader.cpp  ELF_Reader.hpp
CFXS_L0_Debugger/src/Debugger/Probe/: I_Probe.hpp
CFXS_L0_Debugger/src/Debugger/Probe/JLink/: JLink.cpp  JLink.hpp  JLink_GetConnectedProbes.cpp  JLink_ProbeInfo.cpp  JLink_Target.cpp
CFXS_L0_Debugger/src/Debugger/Test/: RVeips_ProbeTest.cpp  RVeips_ProbeTest.hpp
CFXS_L0_Debugger/src/Log/: AppLogBufferSink.cpp  AppLogBufferSink.hpp  Log.cpp  Log.hpp
CFXS_L0_Debugger/src/UI/Helpers/: CreateQMenuTextSeparator.hpp
CFXS_L0_Debugger/src/UI/Models/FileBrowser/: FileBrowserModel.cpp  FileBrowserModel.hpp  FileIconProvider.cpp
CFXS_L0_Debugger/src/UI/Models/Symbols/: SymbolSearchSortProxy.cpp  SymbolSearchSortProxy.hpp  SymbolTableModel.cpp  SymbolTableModel.hpp
CFXS_L0_Debugger/src/UI/Panels/: AppLogPanel.hpp  HexEditorPanel.hpp  I_Panel.hpp  TextEditPanel.hpp  WorkspacePanel.hpp
CFXS_L0_Debugger/src/UI/Panels/AppLogPanel/: AppLogPanel.cpp  AppLogPanel.hpp  AppLogPanel.ui
CFXS_L0_Debugger/src/UI/Panels/Debugger/: HexEditorPanel.hpp  SymbolListPanel.hpp  TargetBinaryPanel.hpp
CFXS_L0_Debugger/src/UI/Panels/HexEditorPanel/: HexEditorPanel.cpp  HexEditorPanel.ui
CFXS_L0_Debugger/src/UI/Panels/TextEditPanel/: TextEditPanel.cpp  (+2 more)
CFXS_L0_Debugger/src/UI/Providers/: FileIconProvider.cpp  FileIconProvider.hpp
CFXS_L0_Debugger/src/Utils/: FuzzyMatcher.cpp  FuzzyMatcher.hpp
HardwareDebuggerApp/: CMakeLists.txt  _GLEW_Options.cmake  _KDDockWidgets_Options.cmake  _License.lhg  _SDL_Options.cmake  _Sources.cmake
HardwareDebuggerApp/res/: Fonts.qrc  UI.qrc  UI_Resources.qrc
HardwareDebuggerApp/res/Styles/: Main.qss
HardwareDebuggerApp/res/UI/: DarkStyle.qss
HardwareDebuggerApp/res/UI/Images/: desktop.ini
HardwareDebuggerApp/src/: Application.cpp  Application.hpp  Assert.hpp  Compiler.hpp  DynamicLibrary.hpp  HWD_Application.cpp  HWD_Application.hpp  Utils.hpp  main.cpp  main.hpp
HardwareDebuggerApp/src/Core/: Application.cpp  Application.hpp  HWD_Application.cpp  HWD_Application.hpp  L0_Application.cpp  L0_Application.hpp  OpenGL_Context.cpp  OpenGL_Context.hpp  PlatformUtils.hpp  Window.cpp  Window.hpp
HardwareDebuggerApp/src/Core/Project/: ProjectManager.cpp  ProjectManager.hpp
HardwareDebuggerApp/src/Debugger/ELF/: ELF.hpp  ELF32.hpp  ELF_Reader.cpp  ELF_Reader.hpp
HardwareDebuggerApp/src/Debugger/Probe/: I_Probe.hpp
HardwareDebuggerApp/src/Debugger/Test/: RVeips_ProbeTest.cpp  RVeips_ProbeTest.hpp
HardwareDebuggerApp/src/Log/: AppLogBufferSink.cpp  AppLogBufferSink.hpp  Log.cpp  Log.hpp
HardwareDebuggerApp/src/Probe/: IProbe.hpp  I_Probe.hpp  JLink.cpp  JLink.hpp  JLink_Platform.hpp  TargetDevice.hpp
HardwareDebuggerApp/src/Probe/JLink/: Convert.lua  JLink.cpp  JLink.hpp  JLink_Driver.cpp  JLink_Driver.hpp  JLink_Driver_LoadFunctionPointers.cpp  JLink_GetConnectedProbes.cpp  JLink_Probe.cpp  JLink_Probe.hpp  JLink_ProbeInfo.cpp  JLink_Target.cpp  JLink_Types.hpp  TestFirmware.h
HardwareDebuggerApp/src/Test/: IAR_Macro_Parser.lua  RVeips_ProbeTest.cpp  RVeips_ProbeTest.hpp  TestFirmware.h  ddram.iar
HardwareDebuggerApp/src/UI/: HWD_WidgetFactory.cpp  HWD_WidgetFactory.hpp  Test_StyleSheet.hpp
HardwareDebuggerApp/src/UI/FunctionProfiler/: FunctionProfilerWindow.cpp  FunctionProfilerWindow.hpp  FunctionProfilerWindow.ui
HardwareDebuggerApp/src/UI/MainWindow/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
HardwareDebuggerApp/src/UI/Models/: FileBrowserModel.cpp  FileBrowserModel.hpp
HardwareDebuggerApp/src/UI/ProjectFileBrowser/: ProjectFileBrowser.cpp  ProjectFileBrowser.hpp  ProjectFileBrowser.ui
HardwareDebuggerApp/src/UI/TargetConsole/: TargetConsoleWindow.cpp  TargetConsoleWindow.hpp
(+87 files in other folders)
